<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                   android:orientation="vertical"
                                   android:layout_width="match_parent"
                                   android:layout_height="wrap_content"
                                   app:cardBackgroundColor="@color/colorCardBackground"
                                   app:cardElevation="5dp"
                                   android:layout_marginTop="@dimen/small_margin"
                                   app:cardCornerRadius="0dp"
                                   android:layout_marginBottom="16dp"
                                   android:paddingBottom="@dimen/small_margin"
>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <!-- TITLE -->
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ddSrd_title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/srd_title"
                android:textSize="25sp"
                android:textColor="@color/colorFontTitle"
                android:padding="@dimen/small_margin"
                android:textStyle="bold"
        />
        <!-- ===== -->

        <!-- SEPERATOR -->
        <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:id="@+id/ddSrd_seperator"
                app:layout_constraintTop_toBottomOf="@id/ddSrd_title"
                android:background="@color/colorSeparatorColor"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginEnd="@dimen/small_margin"
                android:layout_marginBottom="@dimen/small_margin"/>
        <!-- ========= -->

        <!-- TEXT -->
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ddSrd_text"
                android:text="@string/srd_text"
                android:textColor="@color/colorFontRegular"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/ddSrd_seperator"
                android:layout_margin="@dimen/small_margin"/>
        <!-- ==== -->

        <!-- View Document -->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/ddSrd_viewDocument"
                app:layout_constraintTop_toBottomOf="@id/ddSrd_text"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="@dimen/small_margin"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="horizontal">

            <!-- ICON -->
            <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:id="@+id/ddSrd_viewDocIcon"
                    android:src="@drawable/ic_insert_drive_file"
                    android:padding="10dp"
                    android:tint="@color/colorTintColor"
            />
            <!-- ==== -->

            <!-- TEXT -->
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/ddSrd_viewDocText"
                    android:text="@string/srd_action"
                    android:gravity="center_vertical"
                    android:paddingStart="16dp"
                    android:textSize="18sp"
                    android:textColor="@color/colorTintColor"
            />
            <!-- ==== -->

        </LinearLayout>
        <!-- ============= -->

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>